# ComfyUI-SMPLx-Estimator

./: .gitignore  LICENSE  README.md  __init__.py  comfy-env-root.toml  comfy-test.toml  install.py  prestartup_script.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  MEMO.md  PLAN.md
.claude/memory/: MEMORY.md  lesson_comfyui_inference_mode_autograd.md  lesson_graphify_engine_installed.md  lesson_inventory_before_fetch.md  lesson_local_install_only.md  lesson_surface_missing_not_substitute.md  lesson_verify_source_exists.md
.claude/working_memory/: 2026-06-25_refinement-diagnosis-and-test-loop.md  2026-06-25_skills-agents-memory-setup.md  2026-06-25_smplx-hybrid-critiques.json  2026-06-25_smplx-hybrid-finalplan.json  2026-06-25_smplx-implementation.md  2026-06-25_smplx-redesign-critiques.json  2026-06-25_smplx-redesign-finalplan.json  2026-06-26_editor-skinning-camera-and-sota-research.md
.github/workflows/: publish.yml
assets/: smpl_mean_params.npz
example_workflows/: smplx_multihmr_example.json
js/: extension.js  viewer_pose3d.html
js/three/: viewer-bundle-three.js
nodes/: __init__.py  editpose_nodes.py  export_nodes.py  model_loaders.py  multihmr_nodes.py  nlf_nodes.py  smirk_nodes.py  smplx_nodes.py  wholebody_nodes.py  wilor_nodes.py
scripts/: dev_refresh.sh
sources/: research_expressive_wholebody_smplx_2026-06-29.md  research_single_image_smplx_sota_2026-06.md
tests/: test_edit_p4.py  test_fit_3d.py  test_joint_map.py  test_skin.py  test_wholebody_hands.py
working_memory/: 2026-06-29_camera-render-and-mesh-skinning.md
(+23 files in other folders)
