[project]
name = "comfyui-editpose"
version = "1.0.0"
description = "Single-image motion capture for ComfyUI with ClickPose, MotionAGFormer, and an interactive 3D pose editor."
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "scipy",
    "torch",
    "torchvision",
]

[project.urls]
Repository = "https://github.com/ameliacode/comfyui-mocap"

[tool.comfy]
PublisherId = "ameliacode"
DisplayName = "EditPose"
Icon = ""
