[project]
name = "comfyui-smplx-estimator"
version = "1.0.4"
description = "Single-image SMPL-X estimation for ComfyUI (NLF / Multi-HMR / WiLoR) with an interactive 3D SMPL-X editor and control-map / mesh export."
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "scipy",
    "torch",
    "torchvision",
]

[project.urls]
Repository = "https://github.com/ameliacode/ComfyUI-SMPLx-Estimator"

[tool.comfy]
PublisherId = "ameliacode"
DisplayName = "ComfyUI-SMPLx Estimator"
Icon = ""
